[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "env-drift-guard"
version = "0.1.0"
description = "Audit .env files against an example contract."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["env", "dotenv", "cli", "configuration", "ci"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
env-drift-guard = "env_drift_guard.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

